fix image break in safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -614,9 +614,6 @@ section {
   overflow: hidden;
   z-index: 1;
   background: rgba(69, 80, 91, 0.8);
-  display: flex;
-  justify-content: center;
-  max-height: 800px;
 }
 
 .portfolio .portfolio-wrap::before {
